# rsrt

./: ARCHITECTURE.md  Cargo.toml  LICENSE-MIT  README.md
docs/spec/: NOTES.md  encryption.md  handshake.md  packets.md  transmission.md
examples/: recv.rs  send.rs
examples/common/: mod.rs  url.rs
src/: error.rs  lib.rs  listener.rs  net.rs  options.rs  socket.rs
src/core/: encrypted_sim_tests.rs  handshake.rs  mod.rs  pacing.rs  receiver.rs  sender.rs  sim_tests.rs  time.rs  tsbpd_stall_tests.rs
src/crypto/: context.rs  ctr.rs  keys.rs  km.rs  mod.rs
src/packet/: control.rs  data.rs  handshake.rs  mod.rs  types.rs
tests/: core_sim.rs  encrypted_lossy.rs  encrypted_sim.rs  encryption.rs  interop_slt.rs  interop_slt_enc.rs  loopback.rs  lossy.rs  support_selftest.rs  tsbpd_stall.rs
tests/support/: mod.rs  net.rs  payload.rs  proxy.rs  rng.rs  slt.rs
