[package]
name = "srt"
version = "0.1.0"
authors = ["Andrey Dyldin <and@cesbo.com>"]
edition = "2021"

[dependencies]
tracing = "0.1"
tokio = { version = "1.48", features = ["rt", "net", "time", "sync", "macros"] }
socket2 = "0.6"
aes = { version = "0.8", features = ["zeroize"] }
ctr = "0.9"
aes-kw = "0.2"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha1 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
getrandom = "0.3"

[dev-dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "io-util", "process"] }
